--- a/nb-next/src/app/globals.css
+++ b/nb-next/src/app/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
 
 @media (prefers-color-scheme: dark) {
